<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Political Preparedness</string>

    <!-- Error Strings -->
    <string name="error_server_unknown">An unknown error occurred from the server.</string>
    <string name="error_no_internet_connection">Failed to send network request.\n\nPlease make sure you are connected to the internet, then try again.</string>
    <string name="error_failed_to_fetch_representatives">Failed to fetch representatives for the specified location.\n\nPlease make sure you input a correct location within the United States.</string>
    <string name="error_failed_to_fetch_current_location">Failed to fetch current location. Please try again.</string>
    <string name="error_location_permission_required">"Location permission is needed to fetch your current location."</string>
    <string name="error_device_location_disabled">Device location is disabled. Please enable it first.</string>

    <!-- Hint Strings -->
    <string name="hint_address_line_1">Address Line 1</string>
    <string name="hint_address_line_2">Address Line 2</string>
    <string name="hint_city">City</string>
    <string name="hint_zip">Zip</string>

    <!-- Screens Labels -->
    <string name="label_elections">Elections</string>
    <string name="label_representatives">Representatives</string>

    <!-- Launch Screen -->
    <string name="ballot_logo">Ballot Logo</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>

    <!-- Elections Screen -->
    <string name="saved_elections">Saved Elections</string>
    <string name="no_saved_elections">No saved elections.</string>

    <!-- Representatives Screen -->
    <string name="official_photo">Official Photo</string>
    <string name="website_link">Official Website Link</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="twitter_link">Twitter Link</string>
    <string name="representatives_search">Representatives Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="enable_device_location">Enable Device Location</string>
    <string name="msg_open_location_settings">Device location is required to get your current location. Please go to the location settings, and enable it.</string>
    <string name="no_representatives_fetched">No representatives fetched yet.</string>

    <!-- Voter Info Screen -->
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>

</resources>
