<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/large_padding">

        <ImageView
            android:id="@+id/iv_ballot_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/ballot_logo"
            android:src="@drawable/ballot_logo"
            app:layout_constraintBottom_toTopOf="@id/btn_elections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_elections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@id/btn_representatives" />

        <Button
            android:id="@+id/btn_representatives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
