<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.ui.representatives.RepresentativesViewModel" />

    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/tv_representatives_search"
            style="@style/HeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:layout_marginTop="@dimen/large_padding"
            android:layout_marginEnd="@dimen/large_padding"
            android:text="@string/representatives_search"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="streetAddress"
            android:hint="@string/hint_address_line_1"
            android:inputType="textPostalAddress"
            android:text="@{viewModel.address.line1}"
            app:layout_constraintEnd_toEndOf="@id/tv_representatives_search"
            app:layout_constraintStart_toStartOf="@id/tv_representatives_search"
            app:layout_constraintTop_toBottomOf="@id/tv_representatives_search" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="extendedAddress"
            android:hint="@string/hint_address_line_2"
            android:inputType="textPostalAddress"
            android:text="@{viewModel.address.line2}"
            app:layout_constraintEnd_toEndOf="@id/tv_representatives_search"
            app:layout_constraintStart_toStartOf="@id/tv_representatives_search"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="addressLocality"
            android:hint="@string/hint_city"
            android:inputType="textPostalAddress"
            android:text="@{viewModel.address.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="@id/tv_representatives_search"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            stateValue="@{viewModel.address.state}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="addressRegion"
            android:entries="@array/states"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="@id/tv_representatives_search"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="postalCode"
            android:hint="@string/hint_zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@{viewModel.address.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="@id/tv_representatives_search"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintEnd_toEndOf="@id/tv_representatives_search"
            app:layout_constraintStart_toStartOf="@id/tv_representatives_search"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/btn_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            app:layout_constraintEnd_toEndOf="@id/tv_representatives_search"
            app:layout_constraintStart_toStartOf="@id/tv_representatives_search"
            app:layout_constraintTop_toBottomOf="@id/btn_search" />

        <TextView
            android:id="@+id/tv_my_representatives"
            style="@style/HeaderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:text="@string/my_representatives"
            app:layout_constraintEnd_toEndOf="@id/tv_representatives_search"
            app:layout_constraintStart_toStartOf="@id/tv_representatives_search"
            app:layout_constraintTop_toBottomOf="@id/btn_location" />

        <ProgressBar
            android:id="@+id/pb_representatives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_representatives" />

        <TextView
            android:id="@+id/tv_state_representatives"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/no_representatives_fetched"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_representatives" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_representatives"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_representatives"
            tools:listitem="@layout/item_representative"
            tools:visibility="visible" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>
