<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="nav_graph"
    app:startDestination="@id/launchFragment">

    <fragment
        android:id="@+id/launchFragment"
        android:name="com.example.android.politicalpreparedness.ui.launch.LaunchFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_launch">
        <action
            android:id="@+id/action_launchFragment_to_electionsFragment"
            app:destination="@id/electionsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/action_launchFragment_to_representativesFragment"
            app:destination="@id/representativesFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>

    <fragment
        android:id="@+id/electionsFragment"
        android:name="com.example.android.politicalpreparedness.ui.elections.ElectionsFragment"
        android:label="@string/label_elections"
        tools:layout="@layout/fragment_elections">
        <action
            android:id="@+id/action_electionsFragment_to_voterInfoFragment"
            app:destination="@id/voterInfoFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>

    <fragment
        android:id="@+id/representativesFragment"
        android:name="com.example.android.politicalpreparedness.ui.representatives.RepresentativesFragment"
        android:label="@string/label_representatives"
        tools:layout="@layout/fragment_representatives" />

    <fragment
        android:id="@+id/voterInfoFragment"
        android:name="com.example.android.politicalpreparedness.ui.voterinfo.VoterInfoFragment"
        android:label="{arg_election_name}"
        tools:layout="@layout/fragment_voter_info">
        <argument
            android:name="arg_election_name"
            app:argType="string" />
        <argument
            android:name="arg_election_id"
            app:argType="integer" />
        <argument
            android:name="arg_division"
            app:argType="com.example.android.politicalpreparedness.models.Division" />
    </fragment>

</navigation>
