<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/tv_upcoming_elections"
            style="@style/HeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:layout_marginTop="@dimen/large_padding"
            android:layout_marginEnd="@dimen/large_padding"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@id/rv_upcoming_elections"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_upcoming_elections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_saved_elections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming_elections" />

        <TextView
            android:id="@+id/tv_state_upcoming_elections"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="32dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tv_saved_elections"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming_elections" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming_elections"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/tv_saved_elections"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming_elections"
            tools:listitem="@layout/item_election" />

        <TextView
            android:id="@+id/tv_saved_elections"
            style="@style/HeaderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:text="@string/saved_elections"
            app:layout_constraintBottom_toTopOf="@id/rv_saved_elections"
            app:layout_constraintEnd_toEndOf="@id/tv_upcoming_elections"
            app:layout_constraintStart_toStartOf="@id/tv_upcoming_elections"
            app:layout_constraintTop_toBottomOf="@id/rv_upcoming_elections" />

        <ProgressBar
            android:id="@+id/pb_saved_elections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_saved_elections" />

        <TextView
            android:id="@+id/tv_state_saved_elections"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/no_saved_elections"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_saved_elections" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_saved_elections"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_saved_elections"
            tools:listitem="@layout/item_election" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
